v3 added some styling to show page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Yelpcamp</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body style="padding:70px">
 
