--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,21 +1,44 @@
 <% include ../partials/header %>
 
-<h1><%= campground.name %></h1>
-
-<div>
-	<img class="img-responsive" src="<%= campground.image %>">
-</div>
-
-<p><%= campground.description %></p>
-
-<p>
-	<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>	
-</p>
-
-<div>
-	<% campground.comments.forEach(function(comment){ %>
-	<strong><p><%= comment.author%> - </strong><%= comment.text%></p>
-<% });%>
+<div clas="container">
+	<div class="row">
+		<div class="col-md-3">
+			<p class="lead">YelpCamp</p>
+			<div class="list-group">
+				<div class="list-group-item active">Category 1</div>
+				<div class="list-group-item">Category 2</div>
+				<div class="list-group-item">Category 3</div>
+			</div>
+		</div>
+		<div class="col-md-9">
+			<div class="thumbnail">
+				<img class="img-responsive" src="<%= campground.image %>"> 
+				<div class="caption-full">
+					<h4 class="pull-right">Rs.69/night</h4>
+					<h3><a><%= campground.name %></a></h3>
+					<p><%= campground.description %></p>
+				</div>
+			</div>
+			<div class="well">
+				<div class="text-right">
+					<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
+				</div>
+				<hr>
+				<% campground.comments.forEach(function(comment){ %>
+					<div class="row">
+						<div class="col-md-12">
+							<strong><%= comment.author%></strong>
+							<span class="pull-right">10 sex ago</span>
+							<p>
+								<%= comment.text %>
+							</p>
+						</div>
+					</div>
+				<% });%>
+			</div>
+		</div>
+		
+	</div>
 </div>
 
 
