--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -12,7 +12,7 @@
 					<label>Image URL of Campground:</label><input class ="form-control" type="text" name="image" placeholder="Image URL">
 				</div>
 				<div class="form-group">
-					<label>Description of Campground:</label><input class ="form-control" type="text" name="description" placeholder="Description">
+					<label>Description of Campground:</label><textarea class ="form-control" type="text" name="description" placeholder="Description"></textarea>
 				</div>
 				<div class="form-group">
 					<button class="btn btn-lg btn-primary btn-block">Submit</button>
@@ -22,4 +22,12 @@
 		</div>
 	</div>
 </div>
+
 <% include ../partials/footer %>
+
+<!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
