--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -20,6 +20,12 @@
 					<p>
 						<em>Submitted by :<strong> <%= campground.author.username %></strong></em>
 					</p>
+					<% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
+						<a class="btn btn-sm btn-warning" href="/campgrounds/<%=campground._id%>/edit">Edit Campground</a>
+						<form class="pull-right" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+							<button class="btn btn-sm btn-danger">Delete Campground</button>
+						</form>
+					<%}%>
 				</div>
 			</div>
 			<div class="well">
@@ -35,8 +41,15 @@
 							<p>
 								<%= comment.text %>
 							</p>
+							<% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+								<a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">Edit</a>
+								<form class="pull-right" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+									<button class="btn btn-xs btn-danger">Delete</button>
+								</form>
+							<%}%>
 						</div>
 					</div>
+					<hr>
 				<% });%>
 			</div>
 		</div>
