--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,11 +15,11 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<% if(!currentUser) {%>
-					<li><a href="/login">Login</a></li>
-					<li><a href="/register">Sign Up</a></li>
-					<% } else {%>
-					<li><a href="#">Loggen in as <%=currentUser.username%></a><li>
-					<li><a href="/logout">Logout</a></li>
+						<li><a href="/login">Login</a></li>
+						<li><a href="/register">Sign Up</a></li>
+						<% } else {%>
+						<li><a href="#">Logged in as <%=currentUser.username%></a><li>
+						<li><a href="/logout">Logout</a></li>
 					<%}%>
 				</ul>
 			</div>
