--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
 </head>
 <body style="padding:70px">
-
 <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -25,3 +24,12 @@
 			</div>
 		</div>
 </nav>
+
+<div class="container">
+	<% if(error&&error.length>0) {%>
+	<div class="alert alert-danger" role="alert"><%=error%></div>
+	<%}%>
+	<% if(success&&success.length>0) {%>
+	<div class="alert alert-success" role="alert"><%=success%></div>
+	<%}%>
+</div>			
